--- a/components/navbar.module.css
+++ b/components/navbar.module.css
@@ -1,68 +1,40 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu,
-    Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  line-height: 1.6;
-  font-size: 18px;
-}
-
-* {
-  box-sizing: border-box;
-}
-
-a {
-  color: #0070f3;
-  text-decoration: none;
-}
-
-a:hover {
-  text-decoration: underline;
-}
-
-img {
-  max-width: 100%;
-  display: block;
-}
-
 @import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;700&display=swap');
-* {
+/* * {
   margin: 0;
   padding: 0;
   outline: none;
   box-sizing: border-box;
   font-family: 'Work Sans', sans-serif;
-}
-a{
+} */
+/* a{
   text-decoration: none;
   color: inherit;
-}
-header{
+} */
+/* header{
   position: sticky;
   z-index: 30;
   top: 0;
-}
-nav{
+} */
+.nav{
   display: flex;
   padding: 16px;
   justify-content: space-between;
   align-items: center;
   background-color: #f1f1f1;
 }
-.nav__menu-bar{
+.nav__menu_bar{
   display: flex;
   flex-direction: column;
   row-gap: 6px;
   cursor: pointer;
 }
-.nav__menu-bar div{
+.nav__menu_bar div{
   width: 40px;
   height: 4px;
   background-color: black;
   border-radius: 2px;
 }
-.nav__menu-list{
+.nav__menu_list{
   display: flex;
   flex-direction: column;
   position: fixed;
@@ -75,7 +47,7 @@ nav{
   min-height: calc(100vh - 60px);
   background-color: #f1f1f1;
 }
-.nav__menu-list.active{
+.nav__menu_list.active{
   right: 0;
 }
 .nav__link{
@@ -98,7 +70,7 @@ nav{
   .nav__menu-bar{
     display: none;
   }
-  .nav__menu-list{
+  .nav__menu_list{
     position: unset;
     flex-direction: row;
     min-height: fit-content;
